2008-07-15 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	(hd_home_add_applet):
	(hd_home_remove_applet):
	Support for sticky applets.

2008-07-04 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-layout-dialog.c:
	(hd_layout_dialog_constructed):
	Fixed bad cast.

	* src/home/hd-home-view.c:
	* src/home/hd-home-view.h:
	Support for background modes.

2008-07-04 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home-view.c:
	Split background into solid color and image.

2008-07-04 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home-view.c:
	* src/home/hd-home-view.h:
	* src/home/hd-home.c:
	* src/home/hd-home.h:
	* src/home/hd-layout-dialog.c:
	Layout managing mode: added thumbnails to dialog, connected event
	handlers.

2008-07-04 Tomas Frydrych  <tf@o-hand.com>

	* src/home/Makefile.am:
	* src/home/hd-home.c:
	* src/home/hd-layout-dialog.h:
	* src/home/hd-layout-dialog.c:
	Initial refactoring of layout managing mode to matched the updated
	spec.

2008-07-03 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home-view.c:
	* src/home/hd-home-view.h:
	* src/home/hd-home.c:
	* src/home/hd-home.h:
	Implemented moving of applets across view boundary.

2008-07-03 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home-view.c:
	* src/home/hd-home.c:
	* src/home/hd-home.h:
	Controls for switching home view while dragging an applet.

2008-07-03 Tomas Frydrych  <tf@o-hand.com>

	* configure.ac:
	Put back -Werror following fix in clutter headers.

	* src/home/hd-home.c:
	(hd_home_fixup_operator_position):
	Removed spurious line of code.

2008-07-03 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	* src/home/hd-home.h:
	* src/home/hd-switcher.c:
	* src/home/hd-switcher.h:
	* src/mb/hd-comp-mgr.c:
	* src/mb/hd-comp-mgr.h:
	Added operator label and basic API for setting text and icon.

2008-07-02 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-switcher-group.c:
	( hd_switcher_group_zoom_out):
	Ensure that the actor we are zooming is topmost.
